--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -18,6 +18,7 @@
         <li>Ingredient 1</li>
         <li>Ingredient 2</li>
         <li>Ingredient 3</li>
+        <li>Ingredient 4</li>
     </ul>
 
     <h1>Steps</h1>
